# ElevatorDesign

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Jupyter/: Notebook Plots.ipynb
include/: cable.h  financial.h  main.h  motor.h  utility.h
src/: cable.cpp  financial.cpp  motor.cpp  utility.cpp
